--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="images/about.png" alt="img" />
+            <img src="about.png" alt="img" />
           </div>
           <div class="right">
             <div class="topic">My Interest</div>
