--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Responsive Portfolio Website HTML CSS| CodingNepal</title>
+    <title>Rey Mon</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -153,21 +153,21 @@
               <i class="fab fa-android"></i>
             </div>
             <div class="topic">Concept Artist</div>
-            <p>I am skilled in digital marketing, utilizing tools and strategies for SEO, social media management, content creation, and analytics to enhance online presence, drive engagement, and optimize marketing campaigns effectively.</p>
+            <p>I'm a concept artist who brings creative visions to life through detailed visuals. I design characters, environments, and objects, using imagination and technical skill to shape immersive worlds for films, games, and more.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-camera-retro"></i>
             </div>
-            <div class="topic">Photography</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <div class="topic">Web Development</div>
+            <p>As a web developer, I specialize in creating dynamic and user-friendly websites. I focus on delivering responsive designs, seamless functionality, and clean code, using modern web technologies to ensure smooth and engaging digital experiences.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-tablet-alt"></i>
             </div>
             <div class="topic">Apps Devlopment</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>As an app developer, I design and build functional, user-friendly applications for mobile and desktop platforms. My focus is on creating seamless experiences through intuitive interfaces and robust coding, using modern tools and technologies to solve user needs.</p>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           <div class="topic">Have Any Project?</div>
           <p>If you have any specific projects you'd like to highlight or discuss, feel free to share details! If you need help describing a project or showcasing it, let me know how I can assist.</p>
           <div class="button">
-            <button>Let's Chat</button>
+            <button>Chat</button>
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@
     <!-- Footer Section Start -->
     <footer>
       <div class="text">
-        <span>Created By <a href="#">ReyMon</a> | &#169; 2021 All Rights Reserved</span>
+        <span>Created By <a href="#">ReyMon</a> | &#169; 2024 All Rights Reserved</span>
       </div>
     </footer>
 
