--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Rey Mon</title>
+    <title>Responsive Portfolio Website HTML CSS| CodingNepal</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -24,6 +24,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
           <div class="cancel-btn">
@@ -32,7 +33,7 @@
         </ul>
         <div class="media-icons">
           <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
@@ -47,11 +48,11 @@
         <div class="text">
           <div class="text-one">This is,</div>
           <div class="text-two">Rey Mon</div>
-          <div class="text-three">Game developer, UI/UX Designer</div>
+          <div class="text-three">UI/UX Designer</div>
           <div class="text-four">From Nepal</div>
         </div>
         <div class="button">
-          <button>Hire Me</button>
+          <button>Contact</button>
         </div>
       </div>
     </section>
@@ -62,7 +63,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="about.png" alt="img" />
+            <img src="images/about.png" alt="img" />
           </div>
           <div class="right">
             <div class="topic">My Interest</div>
@@ -91,7 +92,7 @@
               I am skilled in both design and development, using tools like Figma and Adobe PS, AI for UI/UX design and programming language like C, C#, C++ and python for coding and Unity for development. My expertise includes wireframing, prototyping, programming, and optimizing digital solutions, blending creativity with technical proficiency to create engaging, functional experiences.
             </p>
             <div class="experience">
-              <div class="num">4</div>
+              <div class="num">8</div>
               <div class="exp">
                 Month Of <br />
                 Experience
@@ -101,24 +102,39 @@
           <div class="boxes">
             <div class="box">
               <div class="topic">Figma</div>
+              <div class="per">80%</div>
+            </div>
+            <div class="box">
+              <div class="topic">Blender</div>
+              <div class="per">59%</div>
+            </div>
+            <div class="box">
+              <div class="topic">PhotoShop</div>
               <div class="per">70%</div>
             </div>
             <div class="box">
-              <div class="topic">C#</div>
-              <div class="per">40%</div>
-            </div>
-            <div class="box">
-              <div class="topic">Python</div>
-              <div class="per">50%</div>
-            </div>
-            <div class="box">
-              <div class="topic">C language</div>
+              <div class="topic">Illustrator</div>
               <div class="per">60%</div>
             </div>
           </div>
         </div>
       </div>
     </section>
+        <!-- Portfolio Me section Start -->
+        <section class="portfolio" id="portfolio">
+          <div class="content">
+            <div class="title"><span>Portfolio</span></div>
+            <div class="text">
+              <div class="topic">Wanna see my Projects ?</div>
+              <p>You can view my projects on Behance by visiting my profile "Remant Shrestha". There, you’ll find a portfolio of my design work, including UI/UX, graphic design, and other creative projects that showcase my skills and expertise. Feel free to browse and explore my work in detail!</p>
+              <div class="button">
+                <a href="https://www.behance.net/remantshrestha"></a><button role="link">Visit</button> </a>
+t  
+            
+              </div>
+            </div>
+          </div>
+        </section>
 
     <!-- My Services Section Start -->
     <section class="services" id="services">
@@ -129,45 +145,45 @@
             <div class="icon">
               <i class="fas fa-desktop"></i>
             </div>
-            <div class="topic">Game Devlopment</div>
+            <div class="topic">UI/UX Design</div>
             <p>
-              I excel in game development, with skills in programming languages like C# and C++, game engines such as Unity, and expertise in game mechanics, AI, and graphics optimization.</p>
+              I offer UI/UX design services to create user-friendly, visually appealing, and engaging digital experiences. From user research and wireframing to crafting responsive and accessible designs, I ensure seamless functionality and impactful aesthetics that align with your brand's goals.</p>
           </div>
           <div class="box">
             <div class="icon">
-              <i class="fas fa-paint-brush"></i>
+              <i class="fas fa-globe"></i>
             </div>
-            <div class="topic">Graphic Design</div>
+            <div class="topic">Web Design</div>
             <p>
-              I am skilled in both design and development, using tools like Figma and Adobe XD for UI/UX design and frameworks like React and Unity for coding. My expertise includes wireframing, prototyping, programming, and optimizing digital solutions, blending creativity with technical proficiency to create engaging, functional experiences.</p>
+              I offer web design services that focus on creating visually appealing, responsive, and user-friendly websites. From crafting clean layouts and intuitive navigation to optimizing for mobile devices, I ensure a seamless and engaging experience. My designs prioritize both aesthetics and functionality, aligning with your brand's goals to provide users with an exceptional browsing experience.</p>
           </div>
           <div class="box">
             <div class="icon">
-              <i class="fas fa-chart-line"></i>
+              <i class="fas fa-gamepad"></i>
             </div>
-            <div class="topic">Digital Marketing</div>
-            <p>I am skilled in digital marketing, utilizing tools and strategies for SEO, social media management, content creation, and analytics to enhance online presence, drive engagement, and optimize marketing campaigns effectively.</p>
+            <div class="topic">Game Design</div>
+            <p>I offer game design services that focus on creating engaging, immersive, and fun gaming experiences. From conceptualizing gameplay mechanics to designing levels, characters, and user interfaces, I ensure every element works seamlessly together. My approach combines creativity with technical expertise to deliver games that are both visually captivating and highly playable.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fab fa-android"></i>
             </div>
-            <div class="topic">Concept Artist</div>
-            <p>I'm a concept artist who brings creative visions to life through detailed visuals. I design characters, environments, and objects, using imagination and technical skill to shape immersive worlds for films, games, and more.</p>
+            <div class="topic">App Design</div>
+            <p>I provide app design services focused on creating intuitive, user-friendly, and visually appealing mobile experiences. From user research and wireframing to designing interactive interfaces, I ensure that each app is easy to navigate, functional, and aligned with your brand’s goals. My designs aim to enhance user engagement while delivering a seamless experience across all devices.</p>
           </div>
           <div class="box">
             <div class="icon">
-              <i class="fas fa-camera-retro"></i>
+              <i class="fas fa-brain"></i>
             </div>
-            <div class="topic">Web Development</div>
-            <p>As a web developer, I specialize in creating dynamic and user-friendly websites. I focus on delivering responsive designs, seamless functionality, and clean code, using modern web technologies to ensure smooth and engaging digital experiences.</p>
+            <div class="topic">Concept Generator</div>
+            <p>As a concept generator, I turn ideas into creative, actionable solutions tailored to your goals. From branding to design and storytelling, I craft unique concepts that inspire and engage. Let’s bring your vision to life!</p>
           </div>
           <div class="box">
             <div class="icon">
-              <i class="fas fa-tablet-alt"></i>
+              <i class="fas fa-cubes"></i>
             </div>
-            <div class="topic">Apps Devlopment</div>
-            <p>As an app developer, I design and build functional, user-friendly applications for mobile and desktop platforms. My focus is on creating seamless experiences through intuitive interfaces and robust coding, using modern tools and technologies to solve user needs.</p>
+            <div class="topic">3D Modeling</div>
+            <p>I specialize in creating low-poly 3D models that maintain a clean, stylized aesthetic while being optimized for performance. Whether for games, animations, or visual projects, I focus on crafting visually appealing models with minimal detail but maximum impact. This approach ensures fast rendering and smooth integration into various platforms.</p>
           </div>
         </div>
       </div>
@@ -181,7 +197,7 @@
           <div class="topic">Have Any Project?</div>
           <p>If you have any specific projects you'd like to highlight or discuss, feel free to share details! If you need help describing a project or showcasing it, let me know how I can assist.</p>
           <div class="button">
-            <button>Chat</button>
+            <button>Let's Chat</button>
           </div>
         </div>
       </div>
