--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Responsive Portfolio Website HTML CSS| CodingNepal</title>
+    <title>Remant Shrestha</title>
+        <link rel="shortcut icon" type="x-icon" href="about.png">
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -33,8 +34,12 @@
         </ul>
         <div class="media-icons">
           <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+
           <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+
+          <a href="https://www.linkedin.com/in/remant-shrestha-77246032a/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+          <a href="https://www.behance.net/remantshrestha" target="_blank"><i class="fab fa-behance"></i></a>
         </div>
       </div>
       <div class="menu-btn">
@@ -51,7 +56,7 @@
           <div class="text-three">UI/UX Designer</div>
           <div class="text-four">From Nepal</div>
         </div>
-        <div class="button">
+        <div class="button" onclick="location.href='citizenneptun@gmail.com';">
           <button>Contact</button>
         </div>
       </div>
@@ -63,7 +68,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="images/about.png" alt="img" />
+            <img src="about.png" alt="img" />
           </div>
           <div class="right">
             <div class="topic">My Interest</div>
@@ -129,6 +134,7 @@
               <p>You can view my projects on Behance by visiting my profile "Remant Shrestha". There, you’ll find a portfolio of my design work, including UI/UX, graphic design, and other creative projects that showcase my skills and expertise. Feel free to browse and explore my work in detail!</p>
               <div class="button">
                 <a href="https://www.behance.net/remantshrestha"></a><button role="link">Visit</button> </a>
+            
               </div>
             </div>
           </div>
