--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
           <div class="text-one">This is,</div>
           <div class="text-two">Rey Mon</div>
           <div class="text-three">UI/UX Designer</div>
+          <div class="text-three">3d Artist</div>
+          <div class="text-three">Concept Artist</div>
           <div class="text-four">From Nepal</div>
         </div>
         <div class="button" onclick="location.href='citizenneptun@gmail.com';">
@@ -97,9 +99,9 @@
               I am skilled in both design and development, using tools like Figma and Adobe PS, AI for UI/UX design and programming language like C, C#, C++ and python for coding and Unity for development. My expertise includes wireframing, prototyping, programming, and optimizing digital solutions, blending creativity with technical proficiency to create engaging, functional experiences.
             </p>
             <div class="experience">
-              <div class="num">8</div>
+              <div class="num">1.5</div>
               <div class="exp">
-                Month Of <br />
+                Years Of <br />
                 Experience
               </div>
             </div>
