--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6  fashion logo">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/KingsFashion.jpeg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mockups in seconds</span>
-                                    <em>Fashion / Logo</em>
+                                    <span>Logo Design</span>
+                                    <em>Branding / Logo</em>
                                 </div>
                             </div>
                         </div>
@@ -143,12 +143,12 @@
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/Mobile UI.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Mobile UI Design</span>
+                                    <em>UI Design</em>
                                 </div>
                             </div>
                         </div>
@@ -163,8 +163,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Held by hands</span>
-                                    <em>Fashion / Ads</em>
+                                    <span>Poster Design</span>
+                                    <em>graphic</em>
                                 </div>
                             </div>
                         </div>
@@ -175,12 +175,12 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/RetroAdda.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>Logo Design</span>
+                                    <em>Logo / Branding</em>
                                 </div>
                             </div>
                         </div>
@@ -191,12 +191,12 @@
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/MambaPoster.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Poster Design</span>
+                                    <em>Graphic / Adds</em>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,39 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/MBappePoster.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Mobile devices</span>
+                                    <em>Graphics / Poster</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Murraaa Family.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Logo Design</span>
+                                    <em>Branding / Logo</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Mohito.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -223,43 +255,11 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/KingsFashion.jpeg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
+                                    <span>Product Design</span>
                                     <em>Graphics / Ads</em>
                                 </div>
                             </div>
