--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 fashion ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/my character.png" alt="image" class="img-responsive" />
+                        <img src="img/CreepyugIcon.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Poster Design</span>
-                                    <em>graphic</em>
+                                    <span>Game Icon Design</span>
+                                    <em>Game Design</em>
                                 </div>
                             </div>
                         </div>
